ncc/testsuite/negative/enums.n
enum B : byte {
  | X = 2
  | Y
  | Z = 2222 // E: supplied value 2222 cannot be converted to byte and isn't valid as enum field initializer
}

public enum E { | X | Y | Z }
public enum E2 : E { | A | B | C } // E: is not valid as an underlying type of enum
